[gd_scene load_steps=8 format=3 uid="uid://dpp6ljaglnnpn"]

[ext_resource type="Texture2D" uid="uid://bv6uex3waolmo" path="res://assets/backgrounds/hill_scenery_layers/sky.png" id="1_7r6th"]
[ext_resource type="Shader" uid="uid://daufw7qekigx4" path="res://src/ui/shaders/background_blur.gdshader" id="1_e1pgj"]
[ext_resource type="Script" uid="uid://bat74npni3a88" path="res://src/ui/game_over_screen.gd" id="1_tdpoi"]
[ext_resource type="PackedScene" uid="uid://xbojp1nj4v2u" path="res://src/ui/elements/page_title.tscn" id="1_x2xwo"]
[ext_resource type="PackedScene" uid="uid://kyvdstcxwup5" path="res://src/ui/elements/main_menu_label.tscn" id="2_tn7ck"]
[ext_resource type="PackedScene" uid="uid://celq8766hxbx8" path="res://src/ui/elements/main_menu_button.tscn" id="3_74nxk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nysvi"]
shader = ExtResource("1_e1pgj")
shader_parameter/step = Vector2(0, 0)
shader_parameter/radius = 10.0

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tdpoi")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7r6th")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
material = SubResource("ShaderMaterial_nysvi")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100
alignment = 1

[node name="PageTitle" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_x2xwo")]
layout_mode = 2
text = "[center]Game Over[/center]"

[node name="InfoLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_tn7ck")]
custom_minimum_size = Vector2(800, 40)
layout_mode = 2
bbcode_enabled = true
text = "[center]You got wrecked..[/center]"
fit_content = true

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 200

[node name="RestartGameButton" parent="MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource("3_74nxk")]
layout_mode = 2
text = "Restart Game"

[node name="DisconnectButton" parent="MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource("3_74nxk")]
layout_mode = 2
text = "Disconnect"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
